syntax = "proto3";

option go_package = "internal/users";

service Users {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string id = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    string id = 1;
    User user = 2;
}

message UpdateUserResponse {
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
}

message User {
    string name = 1;
}